--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -485,7 +485,7 @@ jobs:
         run: |
           export PATH=/usr/lib/jvm/java-17-openjdk-amd64/bin:$PATH
           # temporary use debug sign config
-          sed -i "s/signingConfigs.release/signingConfigs.release/g" ./flutter/android/app/build.gradle
+          sed -i "s/signingConfigs.release/signingConfigs.debug/g" ./flutter/android/app/build.gradle
           case ${{ matrix.job.target }} in
             aarch64-linux-android)
             mkdir -p ./flutter/android/app/src/main/jniLibs/arm64-v8a
